k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mf-estimates
  labels:
    app: mf-estimates
spec:
  type: ClusterIP
  selector:
    app: mf-estimates
  ports:
  - port: 80
    targetPort: 3001
    protocol: TCP
    name: http
