k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mf-estimates
  labels:
    app: mf-estimates
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - estimate.mayflower.de
    secretName: mf-estimates-tls
  rules:
  - host: estimate.mayflower.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mf-estimates
            port:
              number: 80
